<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="textview">TextView</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_equal">=</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_mult">*</string>
    <string name="div">div</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="square">x^2</string>
    <string name="clear">Clear</string>
    <string name="root">x^y</string>
    <string name="x_y">x^y</string>
    <string name="sqrt">sqrt(</string>
</resources>
